working on shadow bug, collapse option added

--- a/design V2/css/paragraph.sass
+++ b/design V2/css/paragraph.sass
@@ -42,15 +42,14 @@
 		line-height: 2.5em
 
 .bar-s
-	background-color: $blue
 	text-align: center
 	color: $white
 	padding-top: 1em
 	padding-bottom: 1em
-	box-shadow: 0 2px 10px darken($white, 50%)
+	background-color: mix($blue-green, $blue, 50%)
 	position: relative
-	background-color: $blue-green
-	background: linear-gradient(to bottom right, lighten($blue, 5%), $blue-green)
+	z-index: 20
+	box-shadow: 0 2px 10px darken($white, 50%)
 
 	h3
 		margin: 0
@@ -60,7 +59,7 @@
 	width: 60%
 	margin-left: 20%
 	margin-top: 2em
-	margin-bottom: 2em
+	margin-bottom: 20em
 	box-shadow: 0 5px 10px darken($white, 50%)
 	background-color: lighten($white, 5%)
 
